[package]
name = "project-dependencies-library-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"]  }
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"]}
serde_derive = { version = "1.0.192", features = [] }
serde_yaml = "0.9.27"
tempfile = "3.8.1"
